# fastapi-docker-azure-app

./: .coverage  .dockerignore  .envexemple  .gitignore  Dockerfile  README.md  coverage.xml  deploy.sh  pyproject.toml  requirements.txt
.github/: ci.yml
.github/workflows/: ci.yml
app/: conftests.py  main.py
app/api/v1/endpoints/: auth.py  loans.py  users.py
app/core/: config.py  jwt_handler.py  security.py
app/db/: session.py
app/models/: loans.py  users.py
app/schemas/: auth.py  user.py
app/tests/: test_auth.py
app/utils/: final_model_pipeline.pkl  some_data.csv
migrations/: env.py
tests/: conftest.py  conftests.py  test_auth.py  test_loans.py  test_users.py
