[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loan-prediction-api"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A FastAPI project for loan prediction"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]